2004-10-31  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Implemented node, property and unit
	transformations.

2004-10-29  Stefan Jahn  <stefan@lkcc.org>

	* qucsconv.cpp: Started to implement a netlist conversion
	program.