@@ -1,3 +1,8 @@
+2004-11-02  Stefan Jahn  <stefan@lkcc.org>
+
+	* check_spice.cpp: Fixed unit conversion routine and added
+	voltage source transformations.
+
 2004-10-31  Stefan Jahn  <stefan@lkcc.org>
 
 	* check_spice.cpp: Implemented node, property and unit
